--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html class="no-js" lang="">
+
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,21 +12,20 @@
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.0.min.js"></script>
     </head>
+
     <body>
+        <div class="filter"></div>
 
-        <h1>Hello World</h1>
+        <div class="content">
+          <h1 class="name">Jake Marsh</h1>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
+          <div class="links"></div>
+
+          <h5 class="tagline">Software Engineer & Designer</h5>
+        </div>
+
+        <script src="js/vendor/jquery-1.11.1.min.js"></script>
         <script src="js/main.js"></script>
-
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-33984603-1');ga('send','pageview');
-        </script>
     </body>
+
 </html>
