--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Jake Marsh</title>
-        <meta name="description" content="Jake Marsh - Software Engineer">
+        <title>Jake Marsh &mdash; Software Engineer & Developer</title>
+        <meta name="description" content="The personal landing site for Jake Marsh, a software engineer and developer from Maine.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.8.0.min.js"></script>
     </head>
 
     <body>
@@ -19,13 +19,23 @@
         <div class="content">
           <h1 class="name">Jake Marsh</h1>
 
-          <div class="links"></div>
+          <div class="links">
+            <ul>
+              <li>
+                <a href="https://github.com/jakemmarsh" target="_blank" title="Github"><i class="fa fa-github"></i></a>
+              </li>
+              <li>
+                <a href="https://www.linkedin.com/in/jakemmarsh" target="_blank" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
+              </li>
+              <li>
+                <a href="jake_marsh_resume.pdf" target="_blank" title="Resume"><i class="fa fa-file-text"></i></a>
+              </li>
+            </ul>
+          </div>
 
-          <h5 class="tagline">Software Engineer & Designer</h5>
+          <h5 class="tagline">Software Engineer & Developer</h5>
         </div>
 
-        <script src="js/vendor/jquery-1.11.1.min.js"></script>
-        <script src="js/main.js"></script>
     </body>
 
 </html>
