--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="The personal landing site for Jake Marsh, a software engineer and developer from Maine.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/main.css">
     </head>
