--- a/grumble/index.html
+++ b/grumble/index.html
@@ -44,28 +44,28 @@
 <section class="feedback" id="feedback">
 
   <div class="container">
-    <h1 class="grid-12 text-left headline">Get free snacks for feedback.</h1>
+    <h1 class="grid-12 center-md headline">Get free snacks for feedback.</h1>
   </div>
 
   <div class="container">
-    <p class="grid-8 grid-mobile-12">
+    <div class="grid-md-4 push-md-8 center-md">
+    </div>
+    <p class="grid-md-8 pull-md-4">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque consequat at quam id gravida. Nulla vel enim elit. Donec hendrerit luctus enim, sed volutpat nunc tempor ut. Pellentesque tempor mauris et nibh consectetur, eget condimentum lorem tristique. Duis at accumsan erat. Vivamus pulvinar auctor augue, facilisis placerat ex viverra non. Donec vitae libero felis. In ullamcorper sem sit amet mauris sagittis dignissim. Phasellus ullamcorper congue nunc. Cras venenatis orci at euismod sollicitudin.
     </p>
-    <div class="grid-4 grid-mobile-12">
-    </div>
   </div>
 
 </section>
 <section class="understand" id="understand">
 
   <div class="container">
-    <h1 class="grid-12 text-right headline">Understand your customers better.</h1>
+    <h1 class="grid-12 text-right center-md headline">Understand your customers better.</h1>
   </div>
 
   <div class="container section-body">
-    <div class="grid-4 grid-mobile-12">
+    <div class="grid-md-4 center-md">
     </div>
-    <p class="grid-8 grid-mobile-12">
+    <p class="grid-md-8">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque consequat at quam id gravida. Nulla vel enim elit. Donec hendrerit luctus enim, sed volutpat nunc tempor ut. Pellentesque tempor mauris et nibh consectetur, eget condimentum lorem tristique. Duis at accumsan erat. Vivamus pulvinar auctor augue, facilisis placerat ex viverra non. Donec vitae libero felis. In ullamcorper sem sit amet mauris sagittis dignissim. Phasellus ullamcorper congue nunc. Cras venenatis orci at euismod sollicitudin.
     </p>
   </div>
@@ -75,19 +75,18 @@
       <a href="http://www.apple.com" class="btn" target="_blank">Download for iOS</a>
     </div>
   </div>
-
 </section>
 <section class="team" id="team">
 
   <div class="container">
-    <h1 class="text-left headline">The Team</h1>
+    <h1 class="grid-12 center-md headline">The Team</h1>
   </div>
 
   <div class="container">
-    <div class="grid-5 grid-mobile-12">
+    <div class="grid-md-5 center-md">
       <div class="team-members grid-12 parent"></div>
     </div>
-    <div class="grid-6 push-1 grid-mobile-12">
+    <div class="grid-md-6 push-md-1">
       <h2 class="member-name"></h2>
       <p class="member-bio"></p>
     </div>
@@ -97,11 +96,11 @@
     <footer id="footer">
     
       <div class="container">
-        <h3 class="grid-12 connect">Connect</h3>
+        <h3 class="grid-md-12 connect">Connect</h3>
       </div>
     
       <div class="container">
-        <div class="grid-12">
+        <div class="grid-md-12">
           <a href="#" class="icon">
             <i class="fa fa-envelope"></i>
           </a>
