update grumble preview

--- a/grumble/index.html
+++ b/grumble/index.html
@@ -36,8 +36,7 @@
   </div>
 
   <div class="container">
-    <img src="images/hero_iphone_front.png" class="front-iphone">
-    <img src="images/hero_iphone_back.png" class="back-iphone">
+    <img src="images/hero_iphones.png" class="hero-iphones">
   </div>
 
 </section>
@@ -49,6 +48,7 @@
 
   <div class="container">
     <div class="grid-md-4 push-md-8 center-md">
+      <img src="images/feedback_iphone.png" class="feedback-iphone">
     </div>
     <p class="grid-md-8 pull-md-4">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque consequat at quam id gravida. Nulla vel enim elit. Donec hendrerit luctus enim, sed volutpat nunc tempor ut. Pellentesque tempor mauris et nibh consectetur, eget condimentum lorem tristique. Duis at accumsan erat. Vivamus pulvinar auctor augue, facilisis placerat ex viverra non. Donec vitae libero felis. In ullamcorper sem sit amet mauris sagittis dignissim. Phasellus ullamcorper congue nunc. Cras venenatis orci at euismod sollicitudin.
@@ -64,8 +64,9 @@
 
   <div class="container section-body">
     <div class="grid-md-4 center-md">
+      <img src="images/understand_imac.png" class="understand-imac">
     </div>
-    <p class="grid-md-8">
+    <p class="grid-md-7 push-md-1">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque consequat at quam id gravida. Nulla vel enim elit. Donec hendrerit luctus enim, sed volutpat nunc tempor ut. Pellentesque tempor mauris et nibh consectetur, eget condimentum lorem tristique. Duis at accumsan erat. Vivamus pulvinar auctor augue, facilisis placerat ex viverra non. Donec vitae libero felis. In ullamcorper sem sit amet mauris sagittis dignissim. Phasellus ullamcorper congue nunc. Cras venenatis orci at euismod sollicitudin.
     </p>
   </div>
