update Grumble preview

--- a/grumble/index.html
+++ b/grumble/index.html
@@ -23,7 +23,7 @@
 <section class="hero" id="hero">
 
   <div class="header clearfix">
-    <div class="container">
+    <div class="container center-md">
       <div class="logo-container">
         <img src="images/logo.png" alt="Grumble logo" class="logo">
         <h4 class="name">Grumble</h4>
