--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a href="https://www.linkedin.com/in/jakemmarsh" target="_blank" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
               </li>
               <li>
-                <a href="jake_marsh_resume.pdf" target="_blank" title="Resume"><i class="fa fa-file-text"></i></a>
+                <a href="Jake_Marsh_Resume.pdf" target="_blank" title="Resume"><i class="fa fa-file-text"></i></a>
               </li>
             </ul>
           </div>
