--- a/grumble/index.html
+++ b/grumble/index.html
@@ -8,8 +8,9 @@
     <title>
         Grumble
     </title>
-    <meta name="description" content="">
+    <meta name="description" content="Get free snacks for feedback. Understand your customers better.">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="shortcut icon" href="favicon.ico">
 
     <link rel="stylesheet" href="http://yui.yahooapis.com/combo?pure/0.5.0/base-min.css&pure/0.5.0/grids-min.css&pure/0.5.0/grids-responsive-min.css">
     <link rel="stylesheet" href="css/main.min.css">
