Update grumble preview

--- a/grumble/index.html
+++ b/grumble/index.html
@@ -9,7 +9,7 @@
         Grumble
     </title>
     <meta name="description" content="Get free snacks for feedback. Understand your customers better.">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="favicon.ico">
 
     <link rel="stylesheet" href="http://yui.yahooapis.com/combo?pure/0.5.0/base-min.css&pure/0.5.0/grids-min.css&pure/0.5.0/grids-responsive-min.css">
@@ -26,7 +26,7 @@
   <div class="header clearfix">
     <div class="container center-md">
       <div class="logo-container">
-        <img src="images/logo.png" alt="Grumble logo" class="logo">
+        <img src="images/logo.png" alt="Grumble logo" class="logo" />
         <h4 class="name">Grumble</h4>
       </div>
     </div>
@@ -37,25 +37,30 @@
   </div>
 
   <div class="container">
-    <img src="images/hero_iphones.png" class="hero-iphones">
+    <img src="images/hero_iphones.png" class="hero-iphones" />
   </div>
 
 </section>
 <section class="feedback" id="feedback">
 
   <div class="container">
-    <h1 class="grid-12 center-md headline">Get free snacks for feedback.</h1>
+    <h1 class="grid-12 center-md headline">Free snacks for feedback.</h1>
   </div>
 
-  <div class="container">
+  <div class="container section-body">
     <div class="grid-md-4 push-md-8 center-md">
-      <img src="images/feedback_iphone.png" class="feedback-iphone">
+      <img src="images/feedback_iphone.png" class="feedback-iphone" />
     </div>
-    <p class="grid-md-8 pull-md-4">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque consequat at quam id gravida. Nulla vel enim elit. Donec hendrerit luctus enim, sed volutpat nunc tempor ut. Pellentesque tempor mauris et nibh consectetur, eget condimentum lorem tristique. Duis at accumsan erat. Vivamus pulvinar auctor augue, facilisis placerat ex viverra non. Donec vitae libero felis. In ullamcorper sem sit amet mauris sagittis dignissim. Phasellus ullamcorper congue nunc. Cras venenatis orci at euismod sollicitudin.
+    <p class="grid-md-8 pull-md-4 section-body-text">
+      As a Grumbler, you will be able to share your thoughts <strong>directly</strong> with decision makers from the <strong>convenience</strong> of your smart phone. Your valuable insights are placed directly into the <strong>business owners’</strong> hands.  They hear the good, the bad and the ugly without worrying about public reviews tarnishing their business’ <strong>reputations</strong>. Managers can then show their appreciation with personalized messages, rewards and more. Change the world, one Grumble (and one reward) at a time.
     </p>
   </div>
 
+  <div class="container">
+    <div class="grid-12 text-center">
+      <a href="http://www.apple.com" class="btn white" target="_blank">Download for iOS</a>
+    </div>
+  </div>
 </section>
 <section class="understand" id="understand">
 
@@ -65,16 +70,16 @@
 
   <div class="container section-body">
     <div class="grid-md-4 center-md">
-      <img src="images/understand_imac.png" class="understand-imac">
+      <img src="images/understand_imac.png" class="understand-imac" />
     </div>
-    <p class="grid-md-7 push-md-1">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque consequat at quam id gravida. Nulla vel enim elit. Donec hendrerit luctus enim, sed volutpat nunc tempor ut. Pellentesque tempor mauris et nibh consectetur, eget condimentum lorem tristique. Duis at accumsan erat. Vivamus pulvinar auctor augue, facilisis placerat ex viverra non. Donec vitae libero felis. In ullamcorper sem sit amet mauris sagittis dignissim. Phasellus ullamcorper congue nunc. Cras venenatis orci at euismod sollicitudin.
+    <p class="grid-md-7 push-md-1 section-body-text">
+      <strong>Knowledge is power</strong>, and as a business owner with access to Grumble you will have all the knowledge you need to build meaningful relationships with your customers. No more wondering what people are saying about your business. Simply <strong>sign-up, start engaging and improve</strong> your business by understanding what your customers are looking for. It’s as easy as 1, 2, 3.
     </p>
   </div>
 
   <div class="container">
     <div class="grid-12 text-center">
-      <a href="http://www.apple.com" class="btn" target="_blank">Download for iOS</a>
+      <a href="#" class="btn rust" target="_blank">Manager Dashboard</a>
     </div>
   </div>
 </section>
@@ -90,6 +95,7 @@
     </div>
     <div class="grid-md-6 push-md-1">
       <h2 class="member-name"></h2>
+      <h4 class="member-title"></h4>
       <p class="member-bio"></p>
     </div>
   </div>
