Small wording change

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </ul>
           </div>
 
-          <h5 class="tagline">Software Engineer & Developer</h5>
+          <h5 class="tagline">Software Engineer</h5>
         </div>
 
         <script>
