update tour guide preview

--- a/react-tour-guide/index.html
+++ b/react-tour-guide/index.html
@@ -6,15 +6,15 @@
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width">
 
-      <title>App Name</title>
+      <title>React Tour Guide Example</title>
 
-      <link rel="stylesheet" href="/css/main.css">
+      <link rel="stylesheet" href="./css/main.css">
   </head>
   <body>
 
     <div id="app"></div>
 
-    <script src="/js/main.js"></script>
+    <script src="./js/main.js"></script>
 
   </body>
 </html>
