--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a href="jake_marsh_resume.pdf" target="_blank" title="Resume"><i class="fa fa-file-text"></i></a>
               </li>
               <li>
-                <a href="http://stackoverflow.com/users/880859/jakemmarsh" target="_blank" title="Resume"><i class="fa fa-stack-overflow"></i></a>
+                <a href="http://stackoverflow.com/users/880859/jakemmarsh" target="_blank" title="StackOverflow"><i class="fa fa-stack-overflow"></i></a>
               </li>
             </ul>
           </div>
