--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,6 +14,7 @@
     <body>
         <div class="content">
           <h1 class="name">Jake Marsh</h1>
+          <h2 class="tagline">Full-Stack Product Engineer</h5>
 
           <div class="links">
             <ul>
@@ -31,8 +32,6 @@
               </li>
             </ul>
           </div>
-
-          <h2 class="tagline">Software Engineer</h5>
         </div>
 
         <script>
