--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Jake Marsh &mdash; Software Engineer & Developer</title>
-        <meta name="description" content="The personal landing site for Jake Marsh, a software engineer and developer from Maine.">
+        <title>Jake Marsh | Full-Stack Product Engineer</title>
+        <meta name="description" content="The personal landing site for Jake Marsh, a full-stack product engineer living in the Bay Area.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" href="css/normalize.min.css">
