--- a/index.html
+++ b/index.html
@@ -13,21 +13,29 @@
     </head>
     <body>
         <h1 class="name">Jake Marsh</h1>
-        <h2 class="tagline">Full-Stack Product Engineer</h5>
+
+        <h2 class="tagline">
+          <a href="https://monolist.co" target="_blank" rel="noopener noreferrer">Monolist</a> Co-Founder, Full-Stack Product Engineer
+        </h5>
 
         <div class="links">
           <ul>
             <li>
-              <a href="https://github.com/jakemmarsh" target="_blank" title="Github"><i class="fa fa-github"></i></a>
+              <a href="https://monolist.co" class="icon-link" target="_blank" rel="noopener noreferrer" title="Monolist">
+                <img src="images/monolist_icon.png" alt="Monolist logo" />
+              </a>
             </li>
             <li>
-              <a href="https://www.linkedin.com/in/jakemmarsh" target="_blank" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
+              <a href="https://github.com/jakemmarsh" class="icon-link" target="_blank" rel="noopener noreferrer" title="Github"><i class="fa fa-github"></i></a>
             </li>
             <li>
-              <a href="jake_marsh_resume.pdf" target="_blank" title="Resume"><i class="fa fa-file-text"></i></a>
+              <a href="https://www.linkedin.com/in/jakemmarsh" class="icon-link" target="_blank" rel="noopener noreferrer" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
             </li>
             <li>
-              <a href="http://stackoverflow.com/users/880859/jakemmarsh" target="_blank" title="StackOverflow"><i class="fa fa-stack-overflow"></i></a>
+              <a href="jake_marsh_resume.pdf" class="icon-link" target="_blank" rel="noopener noreferrer" title="Resume"><i class="fa fa-file-text"></i></a>
+            </li>
+            <li>
+              <a href="http://stackoverflow.com/users/880859/jakemmarsh" class="icon-link" target="_blank" rel="noopener noreferrer" title="StackOverflow"><i class="fa fa-stack-overflow"></i></a>
             </li>
           </ul>
         </div>
