--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         <h1 class="name">Jake Marsh</h1>
 
         <h2 class="tagline">
-          <a href="https://monolist.co" target="_blank" rel="noopener noreferrer">Monolist</a> Co-Founder, Full-Stack Product Engineer
+          Co-Founder, Full-Stack Product Engineer
         </h5>
 
         <div class="links">
           <ul>
             <li>
-              <a href="https://monolist.co" class="icon-link" target="_blank" rel="noopener noreferrer" title="Monolist">
-                <img src="images/monolist_icon.png" alt="Monolist logo" />
+              <a href="https://walrus.ai" class="icon-link" target="_blank" rel="noopener noreferrer" title="walrus.ai">
+                <img src="images/walrus_icon.png" alt="walrus.ai logo" />
               </a>
             </li>
             <li>
