--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" href="css/normalize.min.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
@@ -26,16 +25,16 @@
               </a>
             </li>
             <li>
-              <a href="https://github.com/jakemmarsh" class="icon-link" target="_blank" rel="noopener noreferrer" title="Github"><i class="fa fa-github"></i></a>
+              <a href="https://github.com/jakemmarsh" class="icon-link" target="_blank" rel="noopener noreferrer" title="Github"><i class="fab fa-github"></i></a>
             </li>
             <li>
-              <a href="https://www.linkedin.com/in/jakemmarsh" class="icon-link" target="_blank" rel="noopener noreferrer" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/jakemmarsh" class="icon-link" target="_blank" rel="noopener noreferrer" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
             </li>
             <li>
-              <a href="jake_marsh_resume.pdf" class="icon-link" target="_blank" rel="noopener noreferrer" title="Resume"><i class="fa fa-file-text"></i></a>
+              <a href="jake_marsh_resume.pdf" class="icon-link" target="_blank" rel="noopener noreferrer" title="Resume"><i class="fas fa-file-alt"></i></a>
             </li>
             <li>
-              <a href="http://stackoverflow.com/users/880859/jakemmarsh" class="icon-link" target="_blank" rel="noopener noreferrer" title="StackOverflow"><i class="fa fa-stack-overflow"></i></a>
+              <a href="http://stackoverflow.com/users/880859/jakemmarsh" class="icon-link" target="_blank" rel="noopener noreferrer" title="StackOverflow"><i class="fab fa-stack-overflow"></i></a>
             </li>
           </ul>
         </div>
@@ -49,5 +48,6 @@
           ga('create', 'UA-33984603-1', 'auto');
           ga('send', 'pageview');
       </script>
+      <script src="https://kit.fontawesome.com/cd630b4e86.js" crossorigin="anonymous"></script>
     </body>
 </html>
