remove walrus.ai

--- a/index.html
+++ b/index.html
@@ -14,21 +14,16 @@
         <h1 class="name">Jake Marsh</h1>
 
         <h2 class="tagline">
-          Co-Founder, Full-Stack Product Engineer
+          full-stack product engineer
         </h5>
 
         <div class="links">
           <ul>
             <li>
-              <a href="https://walrus.ai" class="icon-link" target="_blank" rel="noopener noreferrer" title="walrus.ai">
-                <img src="images/walrus_icon.png" alt="walrus.ai logo" />
-              </a>
+              <a href="https://www.linkedin.com/in/jakemmarsh" class="icon-link" target="_blank" rel="noopener noreferrer" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
             </li>
             <li>
               <a href="https://github.com/jakemmarsh" class="icon-link" target="_blank" rel="noopener noreferrer" title="Github"><i class="fab fa-github"></i></a>
-            </li>
-            <li>
-              <a href="https://www.linkedin.com/in/jakemmarsh" class="icon-link" target="_blank" rel="noopener noreferrer" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
             </li>
             <li>
               <a href="http://stackoverflow.com/users/880859/jakemmarsh" class="icon-link" target="_blank" rel="noopener noreferrer" title="StackOverflow"><i class="fab fa-stack-overflow"></i></a>
