--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Jake Marsh | Full-Stack Product Engineer</title>
+        <title>Jake Marsh | full-stack product engineer</title>
         <meta name="description" content="The personal landing site for Jake Marsh, a full-stack product engineer living in the Bay Area.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
