--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Jake Marsh | full-stack product engineer</title>
-        <meta name="description" content="The personal landing site for Jake Marsh, a full-stack product engineer living in the Bay Area.">
+        <meta name="description" content="The personal landing site for Jake Marsh, a full-stack product engineer living in Maine.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" href="css/normalize.min.css">
