--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
         <meta name="description" content="The personal landing site for Jake Marsh, a full-stack product engineer living in Maine.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="css/normalize.min.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/main.min.css">
+
+        <link rel="stylesheet" href="css/fontawesome/fontawesome.min.css">
+        <link rel="stylesheet" href="css/fontawesome/brands.min.css">
+        <link rel="stylesheet" href="css/fontawesome/solid.min.css">
     </head>
     <body>
         <h1 class="name">Jake Marsh</h1>
@@ -40,6 +43,5 @@
           ga('create', 'UA-33984603-1', 'auto');
           ga('send', 'pageview');
       </script>
-      <script src="https://kit.fontawesome.com/cd630b4e86.js" crossorigin="anonymous"></script>
     </body>
 </html>
